added new table material_stock and some refactoring
